<resources>
    <string name="app_name">Vynils</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_albums">Álbumes</string>
    <string name="nav_artists">Artistas</string>
    <string name="nav_collectors">Coleccionistas</string>

    <string name="title_vinilos">Vinilos</string>
    <string name="title_albums">Álbumes</string>
    <string name="title_artists">Artistas</string>
...
